# superlinear

./: .gitignore  README.md  environment.yml  pyproject.toml
apps/: __init__.py
apps/cli/: __init__.py  bm25_rag.py  chat_repl.py  client.py  docs_repl.py  light_rag.py  local_snapshots.py  locks.py  main.py  output.py  server_cmds.py  session_cmds.py  snapshot_cmds.py  state.py
apps/server/: __init__.py  app.py  main.py
docs/: installation.md
examples/docs/: README.md
examples/docs/wiki/: artificial_intelligence.txt  attention_machine_learning.txt  byte_pair_encoding.txt  large_language_model.txt  long_short_term_memory.txt  recurrent_neural_network.txt  state_space_representation.txt  transformer_deep_learning.txt
local/superlinear-exp-v0.1/: README.md
superlinear/: __init__.py  _version.py  runtime.py
superlinear/engine/: __init__.py  chat_engine.py  chat_types.py  registry.py  repetition.py  session_snapshots.py  tool_parser.py  types.py
superlinear/engine/adapters/: __init__.py  base.py  superlinear.py
superlinear/kernels/: __init__.py
superlinear/kernels/common/: __init__.py  adjustment.py  power.py
superlinear/kernels/superlinear/: __init__.py
superlinear/kernels/superlinear/attention/: __init__.py  _prefill.py  _sliding_window.py  api.py
superlinear/kernels/superlinear/search/: __init__.py  _reference.py  _triton.py  _triton_gqa.py  api.py
superlinear/kernels/superlinear/span/: __init__.py  _triton_bucketed_gqa.py  _triton_forward.py  _triton_gqa.py  _triton_impl.py  _triton_precomputed_sw.py  _triton_precomputed_sw_gqa.py  api.py  masks.py
tests/: conftest.py
tests/cli/: test_bm25_rag.py  test_cli_foundation.py  test_docs_repl_followup_rag.py  test_light_rag.py
tests/engine/: test_discard_thinking.py  test_repetition_detection.py  test_repetition_early_stop.py  test_sampling_stability.py  test_session_snapshots.py  test_static_cache_sync.py  test_tool_parser.py
tests/server/: test_chat_completions.py
