[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superlinear"
version = "0.1.0"
description = "Efficient sparse attention kernels for long-context language models"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Superlinear Authors"}
]
keywords = [
    "attention",
    "transformers",
    "triton",
    "sparse-attention",
    "long-context",
    "machine-learning",
    "deep-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "triton>=2.1.0",
]

[project.optional-dependencies]
cli = [
    "rank-bm25>=0.2.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
inference = [
    "transformers>=4.38.0,<5",
    "accelerate>=0.26.0",
]
model = [
    "transformers>=4.38.0,<5",
    "accelerate>=0.26.0",
    "vllm>=0.15.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.23.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
]

[project.urls]
Homepage = "https://github.com/concavity-ai/superlinear"
Documentation = "https://github.com/concavity-ai/superlinear#readme"
Repository = "https://github.com/concavity-ai/superlinear"
Issues = "https://github.com/concavity-ai/superlinear/issues"

[project.scripts]
spl = "apps.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["superlinear*", "apps*"]

[tool.setuptools.package-data]
superlinear = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["superlinear"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
